# Nodes_Sensor

./: CMakeLists.txt  partitions.csv  sdkconfig
lib/dht11/: CMakeLists.txt  dht11.c  dht11.h
lib/mqtt_cfg/: CMakeLists.txt  mqtt_cfg.c  mqtt_cfg.h
lib/project_system_files/: CMakeLists.txt  project_system_files.c  project_system_files.h
lib/server_cfg/: CMakeLists.txt  server_cfg.c  server_cfg.h
lib/wifi_pro/: CMakeLists.txt  wifi_pro.c  wifi_pro.h
main/: .project  main.c
spiffs_data/: app.js  index.html  style.css
